--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: 05 github comments
+name: 06 basic trivy scan
 
 on:
   push:
@@ -26,6 +26,24 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       
+      - name: Build and export to Docker (and tag for trivy's benefit)
+        uses: docker/build-push-action@v5
+        with:
+          push: false
+          load: true # Export to Docker Engine rather than pushing to a registry
+          tags: ${{ github.run_id }}
+          target: test
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          platforms: linux/amd64
+
+      - name: Run Trivy for all CVEs (non-blocking)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ github.run_id }}
+          exit-code: 0
+          format: table 
+
       - name: Docker meta
         id: docker_meta
         uses: docker/metadata-action@v5
@@ -69,7 +87,7 @@ jobs:
             ```
           edit-mode: replace
 
-      - name: Docker build
+      - name: Docker build AND PUSH to Docker Hub
         uses: docker/build-push-action@v5
         with:
           push: true
